# abcdef-py

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
abcdef/: README.md  __init__.py
abcdef/b/: __init__.py  event.py
abcdef/c/: __init__.py  command.py  document.py  document_store.py  markers.py  message_bus.py  projector.py  query.py  registry.py
abcdef/core/: __init__.py  event.py  markers.py  registry.py  result.py
abcdef/core/c/: __init__.py  command.py  document_store.py  markers.py  message.py  message_bus.py  projector.py  query.py  registry.py
abcdef/core/cde/: __init__.py  event.py  markers.py
abcdef/core/d/: __init__.py  aggregate.py  domain_event.py  event.py  event_emitting_aggregate.py  markers.py  value_object.py
abcdef/core/de/: __init__.py  aggregate_store.py  domain_event.py  event.py  event_sourced_aggregate.py  event_sourced_domain_event.py  event_sourced_repository.py  event_store.py
abcdef/d/: __init__.py  aggregate.py  domain_event.py  event_emitting_aggregate.py  markers.py  repository.py
abcdef/de/: __init__.py  aggregate_store.py  event_sourced_aggregate.py  event_sourced_domain_event.py  event_sourced_repository.py  event_store.py  markers.py
abcdef/in_memory/: __init__.py  aggregate_store.py  document_store.py  event_bus.py  event_store.py  repository.py
abcdef/specification/: __init__.py  markers.py  specification.py
docs/: backlog.md  roadmap_template.md  tasks.md
docs/design/: architecture.md  coding_conventions.md  python_conventions.md
docs/sessions/: 2026-03-17_codegen_implementation.md  2026-03-17_modulith_implementation.md  roadmap_template.md  session_template.md  sessions_index.md
scripts/: execute_commands.py  mutmut_show_survivors.py  mutmut_stable_survivors.py
src/abcdef/: README.md  __init__.py  markers.py
src/abcdef/b/: README.md  __init__.py
src/abcdef/c/: README.md  __init__.py  document.py  query.py
src/abcdef/codegen/: README.md  __init__.py  cli.py  generator.py
src/abcdef/d/: README.md  __init__.py  repository.py  value_object.py
src/abcdef/de/: README.md  __init__.py  event_sourced_repository.py
src/abcdef/in_memory/: README.md  __init__.py
src/abcdef/modulith/: README.md  (+8 more)
tests/: __init__.py
tests/abcdef/: __init__.py  conftest.py  test_boundaries.py
tests/tic/: __init__.py
tic/: __init__.py
(+141 files in other folders)
