[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abcdef"]

[project]
name = "abcdef"
version = "0.1.0"
description = "ABCDEF framework for CQRS, DDD, and event-sourced applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
abcdef-gen = "abcdef.codegen.cli:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.0,<8",
    "mdformat>=1.0.0,<2",
    "mdformat-gfm>=1.0.0,<2",
    "mdformat-pyproject>=0.1.1,<1",
    "mutmut>=3.3.0,<4",
    "pyright>=1.1.408,<2",
    "pytest-cov>=6.0,<8",
    "pytest-xdist>=3.0,<4",
    "pytest>=9.0.2,<10",
    "ruff>=0.15.6,<1",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.run]
branch = true
source = ["abcdef"]

[tool.mutmut]
paths_to_mutate = ["src/abcdef/"]
tests_dir = ["tests/"]
# mutmut 3 trampolines hardcode `self` for all methods, which breaks
# __init_subclass__ (receives cls, not self). Skip these two files until
# the upstream bug is fixed.
do_not_mutate = [
    "src/abcdef/b/event.py",
    "src/abcdef/d/aggregate.py",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["mutants/", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]

[tool.pytest.ini_options]
addopts = "--cov=abcdef --cov-report=term-missing"
testpaths = ["tests"]
norecursedirs = ["mutants"]

[tool.mdformat]
wrap = 88
end_of_line = "lf"

[tool.ruff]
exclude = ["mutants/"]
line-length = 88
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "C90",  # mccabe complexity
    "N",    # pep8-naming
    "D",    # pydocstring
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
